Fixes z-index

--- a/themes/amirraminfar/static/css/header.css
+++ b/themes/amirraminfar/static/css/header.css
@@ -15,6 +15,7 @@
     border-bottom: var(--border-style);
     lost-align: horizontal flex;
     font-weight: 400;
+    z-index: 2;
 
     & > * {
         font-size: 0.7em;
